WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90845
REGRESSION (
r122168
): Layout Test http/tests/misc/script-defer.html is failing
https://bugs.webkit.org/show_bug.cgi?id=90845
Summary
REGRESSION (r122168): Layout Test http/tests/misc/script-defer.html is failing
Hayato Ito
Reported
2012-07-09 19:13:49 PDT
The following layout test is failing on WebKit Mac, Linux and Win on chromium. http/tests/misc/script-defer.html Dashboard:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Fmisc%2Fscript-defer.html
I've found the same failure on Apple Lion.
http://build.webkit.org/builders/Apple%20Lion%20Debug%20WK2%20%28Tests%29/builds/1065/steps/layout-test/logs/stdio
18:23:00.347 5232 http/tests/misc/script-defer.html -> unexpected text diff mismatch Probable cause: The dashboard said it started to fail after
r122168
.
Attachments
Patch
(5.87 KB, patch)
2012-07-10 05:45 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2012-07-09 19:20:18 PDT
Sad. I'm surprised this wasn't caught on cr-linux. maybe cr-linux doesn't run this test?
http://trac.webkit.org/changeset/122168
Hayato Ito
Comment 2
2012-07-09 19:32:44 PDT
I marked it TEXT TestExpectations on chromium in
http://trac.webkit.org/changeset/122186
. (In reply to
comment #1
)
> Sad. I'm surprised this wasn't caught on cr-linux. maybe cr-linux doesn't run this test? >
http://trac.webkit.org/changeset/122168
That should run. I am not sure why cr-linux could not catch. Is it rare case?
Adam Barth
Comment 3
2012-07-09 23:13:25 PDT
> That should run. I am not sure why cr-linux could not catch. Is it rare case?
It looks like Eric's patch just made it flaky. It happened to pass in exactly the right pattern to trick the bot into landing the patch.
Csaba Osztrogonác
Comment 4
2012-07-10 04:50:59 PDT
It became flakey on GTK and Qt too: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/http/tests/misc/script-defer-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/http/tests/misc/script-defer-actual.txt @@ -1,7 +1,9 @@ This tests for proper execution order of scripts with the defer attribute
https://bugs.webkit.org/show_bug.cgi?id=20710
. external inline +DOMContentLoaded slowDefer +DOMContentLoaded defer DOMContentLoaded load
Eric Seidel (no email)
Comment 5
2012-07-10 04:57:57 PDT
We definitely shoudl not be delivering more than one DOMContentLoaded event. I'll look when I wake tomorrow. I'm also happy to roll out (or have someone roll out) the patch.
Eric Seidel (no email)
Comment 6
2012-07-10 05:08:58 PDT
I've found the bug. Will fix.
Ádám Kallai
Comment 7
2012-07-10 05:11:19 PDT
I skipped this flakey test on Qt.
http://trac.webkit.org/changeset/122214/trunk/LayoutTests/platform/qt/Skipped
Eric Seidel (no email)
Comment 8
2012-07-10 05:45:36 PDT
Created
attachment 151445
[details]
Patch
Thiago Marcos P. Santos
Comment 9
2012-07-10 07:40:58 PDT
(In reply to
comment #4
)
> It became flakey on GTK and Qt too: > --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/http/tests/misc/script-defer-expected.txt > +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/http/tests/misc/script-defer-actual.txt > @@ -1,7 +1,9 @@ > This tests for proper execution order of scripts with the defer attribute
https://bugs.webkit.org/show_bug.cgi?id=20710
. > external > inline > +DOMContentLoaded > slowDefer > +DOMContentLoaded > defer > DOMContentLoaded > load
EFL too.
Zan Dobersek
Comment 10
2012-07-10 07:57:32 PDT
Comment on
attachment 151445
[details]
Patch The patch was reviewed, let's try landing it.
WebKit Review Bot
Comment 11
2012-07-10 09:09:24 PDT
Comment on
attachment 151445
[details]
Patch Clearing flags on attachment: 151445 Committed
r122226
: <
http://trac.webkit.org/changeset/122226
>
WebKit Review Bot
Comment 12
2012-07-10 09:09:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug