REGRESSION (r122168): Layout Test http/tests/misc/script-defer.html is failing https://bugs.webkit.org/show_bug.cgi?id=90845

Reviewed by Alexey Proskuryakov.

Source/WebCore:

I was a bit overzealous in removing bool returns. This one still makes sense.
This just reverts the wrong part of my previous change.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd):
* html/parser/HTMLScriptRunner.cpp:
(WebCore::HTMLScriptRunner::executeScriptsWaitingForParsing):
* html/parser/HTMLScriptRunner.h:
(HTMLScriptRunner):

LayoutTests:

The test should no longer flake.

* platform/chromium/TestExpectations:
* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/108717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122226 268f45cc-cd09-0410-ab3c-d52691b4dbfc