Source/WebCore/html/parser/HTMLDocumentParser.cpp
@@ -380,11 +380,8 @@ void HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd()
 {
     ASSERT(isStopping());
     ASSERT(!hasInsertionPoint());
-    if (m_scriptRunner) {
-        m_scriptRunner->executeScriptsWaitingForParsing();
-        if (isWaitingForScripts())
-            return;
-    }
+    if (m_scriptRunner && !m_scriptRunner->executeScriptsWaitingForParsing())
+        return;
     end();
 }
 
